tests/rosetta/transpiler/Zig/bitmap-flood-fill.error
zig build: exit status 1
/tmp/bitmap-flood-fill.zig:5:67: error: use of undeclared identifier 'handleError'
/tmp/bitmap-flood-fill.zig:59:9: error: use of undeclared identifier 'ff'
